Toggle Maximize Area loses state of expanded/collapsed asset catalogs #117957

Closed
opened 2024-02-07 19:08:55 +01:00 by Simon Thommes · 8 comments
Member

System Information
Operating system: Linux-6.7.2-gentoo-r1-x86_64-AMD_Ryzen_9_5950X_16-Core_Processor-with-glibc2.38 64 Bits, X11 UI
Graphics card: NVIDIA RTX A6000/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 545.29.06

Blender Version
Broken: version: 4.1.0 Alpha, branch: main, commit date: 2024-02-07 11:00, hash: 537d1752899a
Worked: (newest version of Blender that worked as expected)

Short description of error
When using Toggle Maximize Area on any area the catalog tree of the asset browser is collapsed all the way back to All.

Exact steps for others to reproduce the error

**System Information** Operating system: Linux-6.7.2-gentoo-r1-x86_64-AMD_Ryzen_9_5950X_16-Core_Processor-with-glibc2.38 64 Bits, X11 UI Graphics card: NVIDIA RTX A6000/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 545.29.06 **Blender Version** Broken: version: 4.1.0 Alpha, branch: main, commit date: 2024-02-07 11:00, hash: `537d1752899a` Worked: (newest version of Blender that worked as expected) **Short description of error** When using `Toggle Maximize Area` on any area the catalog tree of the asset browser is collapsed all the way back to `All`. <video src="/attachments/156d4b15-9bce-4e02-8942-d79a4ce2cdbd" title="bug-catalog_maximize-2024-02-07_19.08.04.mp4" controls></video> **Exact steps for others to reproduce the error** - open file with asset library (e.g. https://www.blender.org/download/demo/bundles/bundles-3.0/asset-demo-bundle-3.0-cube-diorama.zip) - Collapse and expand for example `All` level catalog - Toggle Maximize Area
Simon Thommes added the
Type
Report
Status
Needs Triage
Priority
Normal
labels 2024-02-07 19:08:56 +01:00
Iliya Katushenock added the
Interest
User Interface
label 2024-02-07 19:10:30 +01:00
Member

Thanks for the report. Can confirm. In older builds, only sub-trees/catalogs were collapsed.

Thanks for the report. Can confirm. In older builds, only sub-trees/catalogs were collapsed.
Pratik Borhade added
Priority
High
and removed
Priority
Normal
labels 2024-02-09 11:30:10 +01:00
Member

This could be a known limitation, but it would be best for @JulianEisel to classify this.

When we "Toggle Maximize Area" it might look simple, with the area just getting larger. However behind the scenes we actually get a new "screen" in the window that gets a single editor, made from the data of the one you are enlarging. When you close it the data in the new editor is swapped back with the old and then the temporary screen is destroyed.

So it is likely that this editor does not save the open/close statuses of the treeview in its spacedata.

You can see similar behavior without using Maximize Area. If you have an Asset Browser open, make adjustments to its sizes, preferences, etc. Then just split the area and you will see that the new copy looks the same except that the tree view is closed.

Or simpler, set up an Asset Browser as you like with the tree open. Save the file and then open it again to see the tree is closed.

This could be a known limitation, but it would be best for @JulianEisel to classify this. When we "Toggle Maximize Area" it might look simple, with the area just getting larger. However behind the scenes we actually get a new "screen" in the window that gets a single editor, made from the data of the one you are enlarging. When you close it the data in the new editor is swapped back with the old and then the temporary screen is destroyed. So it is likely that this editor does not save the open/close statuses of the treeview in its spacedata. You can see similar behavior without using Maximize Area. If you have an Asset Browser open, make adjustments to its sizes, preferences, etc. Then just split the area and you will see that the new copy looks the same except that the tree view is closed. Or simpler, set up an Asset Browser as you like with the tree open. Save the file and then open it again to see the tree is closed.
Author
Member

I see, thanks for the explanation @Harley

I see, thanks for the explanation @Harley
Contributor

Open/closed state is also lost when you simply switch the workspace. Thats pretty annoying. Didn't happen in 4.0

Open/closed state is also lost when you simply switch the workspace. Thats pretty annoying. Didn't happen in 4.0
Contributor

That also happens in Spreadsheet, so, by default, Curve and Point are closed, if you open them and switch workspace they get closed again.

That means every time you open new blend file you need to expand Curve and Point. This is big regression imo.

That also happens in Spreadsheet, so, by default, Curve and Point are closed, if you open them and switch workspace they get closed again. That means every time you open new blend file you need to expand Curve and Point. This is big regression imo.
Member

Tree-views don't ever permanently store their state, they only preserve state across immediate redraws. It's been like that since they were introduced. We could implement more permanent state storage but I think for most simple cases what we have should work well enough, so I'd like to validate the need for this some more first.

I think since 660867fa00 the default collapsed state is broken. Previously whenever a tree-view was drawn that wasn't visible in the previous redraw, we would set a default collapsed state (typically opening root level items) This doesn't seem to be working anymore. I didn't verify this is indeed the culprit but it's my immediate suspect.

Tree-views don't ever permanently store their state, they only preserve state across immediate redraws. It's been like that since they were introduced. We could implement more permanent state storage but I think for most simple cases what we have should work well enough, so I'd like to validate the need for this some more first. I think since 660867fa00 the default collapsed state is broken. Previously whenever a tree-view was drawn that wasn't visible in the previous redraw, we would set a default collapsed state (typically opening root level items) This doesn't seem to be working anymore. I didn't verify this is indeed the culprit but it's my immediate suspect.
Member

I'd like to validate the need for this some more first

I think storing the collapsed state is definitely necessary. There's way losing it when temporarily switching to another view is expected behavior to the user. It could be really annoying.

>I'd like to validate the need for this some more first I think storing the collapsed state is definitely necessary. There's way losing it when temporarily switching to another view is expected behavior to the user. It could be really annoying.
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-03-18 19:33:11 +01:00
Member

The regression is fixed. State is still not preserved but that is not implemented, so it's a known limitation / TODO, as listed in #118201.

The regression is fixed. State is still not preserved but that is not implemented, so it's a known limitation / TODO, as listed in #118201.
Hans Goudey added
Type
Bug
and removed
Type
Report
labels 2024-03-18 19:37:19 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#117957
No description provided.