source/blender/editors/interface/views/tree_view.cc
@@ -527,10 +527,19 @@ bool AbstractTreeViewItem::set_collapsed(const bool collapsed)
   return true;
 }
 
+void AbstractTreeViewItem::uncollapse_by_default()
+{
+  BLI_assert_msg(this->get_tree_view().is_reconstructed() == false,
+                 "Default state should only be set while building the tree");
+  BLI_assert(this->supports_collapsing());
+  /* Set the open state. Note that this may be overridden later by #should_be_collapsed(). */
+  is_open_ = true;
+}
+
 bool AbstractTreeViewItem::is_collapsible() const
 {
-  // BLI_assert_msg(get_tree_view().is_reconstructed(),
-  //  "State can't be queried until reconstruction is completed");
+  BLI_assert_msg(get_tree_view().is_reconstructed(),
+                 "State can't be queried until reconstruction is completed");
   if (children_.is_empty()) {
     return false;
   }
